--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
   "name": "Artemis-AI",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Minimal Node.js backend for Artemis-AI Chatbot",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
+  },
+  "keywords": ["chatbot", "AI", "Artemis-AI"],
+  "author": "Your Name",
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
