--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "Artemis-AI",
+  "name": "artemis-ai-chatbot",
   "version": "1.0.0",
-  "description": "Minimal Node.js backend for Artemis-AI Chatbot",
+  "description": "Artemis AI Chatbot - ICT Project",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": ["chatbot", "AI", "Artemis-AI"],
-  "author": "Your Name",
-  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
+    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2"
   }
 }
